Fix header nav menu
Header nav appears behind the hero scrim, set a z-index to bring it to the
foreground.

--- a/_sass/module/_header.scss
+++ b/_sass/module/_header.scss
@@ -31,6 +31,7 @@ $header-background-color: $color-white;
   right: 0;
   text-align: right;
   top: 0;
+  z-index: $z-header-nav;
 
   label[for="site-nav-trigger"] { // scss-lint:disable QualifyingElement
     display: block;
